# watchdog-device

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  rust.yml
src/: ioctl.rs  lib.rs  watchdog_device.rs
tests/: integration_tests.rs
