[package]
name = "watchdog-device"
version = "0.2.0"
edition = "2021"
authors = ["Alex Maraldi <alex.maraldi@gmail.com>"]
license = "MIT"
description = "Linux Watchdog API implementation."
repository = "https://github.com/DoubleAJ/watchdog-device"
keywords = ["watchdog", "linux", "kernel"]
categories = ["api-bindings", "config", "hardware-support", "os::linux-apis", "external-ffi-bindings"]

[dependencies]
libc = "0.2.151"
nix = { version = "0.27.1", features = ["ioctl"]}
log = "0.4.20"

[dev-dependencies]
env_logger = "0.10.1"
